now its really working, im so proud

--- a/Midterm-Game/Assets/Scenes/MainMenuTemplate.uxml
+++ b/Midterm-Game/Assets/Scenes/MainMenuTemplate.uxml
@@ -1,11 +1,10 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
     <Style src="project://database/Assets/Scenes/ButtonStyleOB.uss?fileID=7433441132597879392&amp;guid=b10f295c76e2c42d1b013da20e08bc15&amp;type=3#ButtonStyleOB" />
     <ui:VisualElement name="Background" style="background-color: rgb(85, 131, 202); height: 384px; width: 761px; flex-grow: 1; align-items: center; justify-content: center;">
-        <ui:VisualElement style="height: 253px; width: 217px; background-color: rgb(221, 216, 216); border-top-left-radius: 10px; border-bottom-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; align-items: center; justify-content: flex-end;">
+        <ui:VisualElement style="height: 253px; width: 217px; background-color: rgb(221, 216, 216); border-top-left-radius: 10px; border-bottom-left-radius: 10px; border-top-right-radius: 10px; border-bottom-right-radius: 10px; align-items: center; justify-content: center;">
             <ui:Label text="Main Menu" display-tooltip-when-elided="true" style="align-items: center; font-size: 30px; -unity-font-style: bold; -unity-text-align: upper-center; color: rgb(31, 6, 84); position: absolute; top: 10px;" />
             <ui:Button text="Start Game" display-tooltip-when-elided="true" name="start-button" class="ButtonStyleOB" />
             <ui:Button text="How To Play" display-tooltip-when-elided="true" name="how-to-play" class="ButtonStyleOB" />
-            <ui:Button text="Exit" display-tooltip-when-elided="true" name="exit-button" class="ButtonStyleOB" />
             <ui:Label display-tooltip-when-elided="true" name="controls" style="height: 32px; width: 244px; color: rgb(0, 0, 0); -unity-text-align: upper-center; -unity-font-style: bold; font-size: 13px; display: none;" />
         </ui:VisualElement>
     </ui:VisualElement>
